--- a/index.html
+++ b/index.html
@@ -1,112 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Adam Walker Personal Portfolio Web-page</title>
-  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/0db405f613.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <nav id="navbar" class="dark-grey-background ">
-    <a class="navlink" href="#contact">Contact</a>
-    <a class="navlink" href="#projects">Work</a>
-    <a class="navlink" href="#about">About</a>
-  </nav>
-  <section id="welcome-section">
-    <h1 id="hello" class="white-text">Hello my name is: <span id="adam">Adam Walker</span></h1>
-    <h2 id="sub-heading" class="white-text">Aspiring web developer and freeCodeCamp student.</h2>
-    <div id="icons">
-      <div class="icon-container">
-        <a href="https://www.linkedin.com/in/adamwalkeruk/" target="_blank" class="fab fa-linkedin-in"></a></div>
-      <div class="icon-container">
-        <a href="https://codepen.io/nootuff" target="_blank" class="fab fa-codepen"></a></div>
-      <div class="icon-container">
-        <a href="https://github.com/Nootuff" target="_blank" class="fab fa-github"></a></div>
-      <div class="icon-container">
-        <a href="https://twitter.com/AdamJonWalker" target="_blank" class="fab fa-twitter"></a></div>
-    </div>
-  </section>
-  <section id="about" class="dark-grey-background">
-    <h2 class="heading white-text">About me </h2>
-    <div id="about-container" class="white-text">
-      <p>Starting in early 2019, I have been steadily improving my front-end coding skills through a number of online resources. I hope to one day become a professional web developer.</p>
-      <p class="proficiency-list">I am currently proficient in:</p>
-      <ul class="proficiency-list">
-        <li>- HTML</li>
-        <li>- CSS</li>
-        <li>- Bootstrap 4</li>
-        <li>- Javascript</li>
-        <li>- jQuery</li>
-      </ul>
-    </div>
-  </section>
-  <section id="projects">
-    <h2 class="heading white-text">My Projects</h2>
-    <div id="grid" class="dark-grey-background">
-      <a href="https://codepen.io/nootuff/full/LKPwKB" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/1%20product-page.jpg" width="100%" alt="Product landing page" class="project-image">
-          <p class="caption">Product Landing Page <span class="pointers">>></span></p>
-        </div>
-      </a>
-      <a href="https://codepen.io/nootuff/full/RzaPWp" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/3%20tech-doc%202.jpg" width="100%" alt="Technical documentation" class="project-image">
-          <p class="caption">Documentation Page <span class="pointers">>></span></p>
-        </div>
-      </a>
-       <a href="https://codepen.io/nootuff/full/eYJZKge" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Palindrome%20Checker%202.jpg" width="100%" alt="Palindrome checker app" class="project-image">
-          <p class="caption">Javascript Palindrome Checker <span class="pointers">>></span></p>
-        </div>
-      </a>
-      <a href="https://codepen.io/nootuff/full/bGEgEjv" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Numeral%20converter.jpg" width="100%" alt="Roman numeral converter app" class="project-image">
-          <p class="caption">Roman Numeral Converter <span class="pointers">>></span></p>
-        </div>
-      </a>
-      <a href="https://codepen.io/nootuff/full/OGxMqw" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Hello-World/master/2%20survey-form.jpg" width="100%" alt="Survey form" class="project-image">
-          <p class="caption">Survey Form <span class="pointers">>></span></p>
-        </div>
-      </a>
-      <a href="https://codepen.io/nootuff/full/KKpLaWW" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Hello-World/master/RGB%20Game.jpg" width="100%" alt="Colour game" class="project-image">
-          <p class="caption">JavaScript Colour Game <span class="pointers">>></span></p>
-        </div>
-      </a>
-    </div>
-    <a href="https://codepen.io/nootuff" target="_blank" id="profile-link">
-      <p id="link-container">See More</p>
-    </a>
-  </section>
-  <section id="contact" class="dark-grey-background white-text">
-    <h2 class="heading white-text">Let's work together!</h2>
-    <form action="/action_page.php">
-      <label for="name">Your Name</label>
-      <br>
-      <input type="text" id="name" name="yourname" placeholder="Enter your name">
-      <br>
-      <label for="email">Your Email</label>
-      <br>
-      <input type="email" id="email" placeholder=" Enter your email" required>
-      <br>
-      <label for="number">Your Number</label>
-      <br>
-      <input type="tel" name="number" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" id="number">
-      <br>
-      <label for="comment">Your Message</label>
-      <br>
-      <textarea rows="4" cols="50" name="comment" id="comment" placeholder=" Something to say?" form="usrform">
-</textarea>
-      <br>
-      <div id="submit-container">
-        <input type="submit" value="Send" id="submit">
-      </div>
-    </form>
-  </section>
-  <footer class="white-text">
-    <p> &copy; Adam Walker 2020 </p>
-  </footer>
-</body>
-</html>
+Test page
