--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </a>
       <a href="https://codepen.io/nootuff/full/OGxMqw" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Hello-World/master/2%20survey-form.jpg" width="100%" alt="Survey form" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/portfolio-quote-generator.jpg" width="100%" alt="Survey form" class="project-image">
           <p class="caption">Survey Form <span class="pointers">>></span></p>
         </div>
       </a>
