--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </a>
       <a href="https://codepen.io/nootuff/full/OGxMqw" target="_blank">
         <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/portfolio-quote-generator.jpg" width="100%" alt="Survey form" class="project-image">
-          <p class="caption">Survey Form <span class="pointers">>></span></p>
+          <p class="caption">API Quote Generator <span class="pointers">>></span></p>
         </div>
       </a>
       <a href="https://codepen.io/nootuff/full/KKpLaWW" target="_blank">
