--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
           <p class="caption">Roman Numeral Converter <span class="pointers">>></span></p>
         </div>
       </a>
-      <a href="https://codepen.io/nootuff/full/OGxMqw" target="_blank">
+      <a href="https://codepen.io/nootuff/full/bGpzgvx" target="_blank">
         <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/portfolio-quote-generator.jpg" width="100%" alt="Survey form" class="project-image">
           <p class="caption">API Quote Generator <span class="pointers">>></span></p>
         </div>
       </a>
-      <a href="https://codepen.io/nootuff/full/KKpLaWW" target="_blank">
+      <a href="https://github.com/Nootuff/API_Pokedex" target="_blank">
         <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Hello-World/master/RGB%20Game.jpg" width="100%" alt="Colour game" class="project-image">
-          <p class="caption">JavaScript Colour Game <span class="pointers">>></span></p>
+          <p class="caption">API Poked&#233;x <span class="pointers">>></span></p>
         </div>
       </a>
     </div>
