--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
       </a>
       <a href="https://github.com/Nootuff/API_Pokedex" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Hello-World/master/RGB%20Game.jpg" width="100%" alt="Colour game" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/API-Pokedex.jpg" width="100%" alt="Colour game" class="project-image">
           <p class="caption">API Poked&#233;x <span class="pointers">>></span></p>
         </div>
       </a>
