--- a/index.html
+++ b/index.html
@@ -46,32 +46,32 @@
     <h2 class="heading white-text">My Projects</h2>
     <div id="grid" class="dark-grey-background">
       <a href="https://codepen.io/nootuff/full/LKPwKB" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/1%20product-page.jpg" width="100%" alt="Product landing page" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/product-page.jpg" width="100%" alt="Product landing page" class="project-image">
           <p class="caption">Product Landing Page <span class="pointers">>></span></p>
         </div>
       </a>
       <a href="https://codepen.io/nootuff/full/RzaPWp" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/3%20tech-doc%202.jpg" width="100%" alt="Technical documentation" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/documentation-page.jpg" width="100%" alt="Technical documentation" class="project-image">
           <p class="caption">Documentation Page <span class="pointers">>></span></p>
         </div>
       </a>
        <a href="https://codepen.io/nootuff/full/eYJZKge" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Palindrome%20Checker%202.jpg" width="100%" alt="Palindrome checker app" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/Palindrome-Checker.jpg" width="100%" alt="Palindrome checker app" class="project-image">
           <p class="caption">Javascript Palindrome Checker <span class="pointers">>></span></p>
         </div>
       </a>
       <a href="https://codepen.io/nootuff/full/bGEgEjv" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Numeral%20converter.jpg" width="100%" alt="Roman numeral converter app" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/Numeral-converter.jpg" width="100%" alt="Roman numeral converter app" class="project-image">
           <p class="caption">Roman Numeral Converter <span class="pointers">>></span></p>
         </div>
       </a>
       <a href="https://codepen.io/nootuff/full/bGpzgvx" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/portfolio-quote-generator.jpg" width="100%" alt="Survey form" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/portfolio-quote-generator.jpg" width="100%" alt="API Quote generator" class="project-image">
           <p class="caption">API Quote Generator <span class="pointers">>></span></p>
         </div>
       </a>
       <a href="https://github.com/Nootuff/API_Pokedex" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/API-Pokedex.jpg" width="100%" alt="Colour game" class="project-image">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/API-Pokedex.jpg" width="100%" alt="API Pokedex" class="project-image">
           <p class="caption">API Poked&#233;x <span class="pointers">>></span></p>
         </div>
       </a>
