--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </a>
     </div>
-    <a href="https://codepen.io/nootuff" target="_blank" id="profile-link">
+    <a href="https://github.com/Nootuff" target="_blank" id="profile-link">
       <p id="link-container">See More</p>
     </a>
   </section>
