--- a/index.html
+++ b/index.html
@@ -32,14 +32,24 @@
     <h2 class="heading white-text">About me </h2>
     <div id="about-container" class="white-text">
       <p>Starting in early 2019, I have been steadily improving my front-end coding skills through a number of online resources. I hope to one day become a professional web developer.</p>
-      <p class="proficiency-list">I am currently proficient in:</p>
-      <ul class="proficiency-list">
-        <li>- HTML</li>
-        <li>- CSS</li>
-        <li>- Bootstrap 4</li>
-        <li>- Javascript</li>
-        <li>- jQuery</li>
-      </ul>
+       <table class="proficiency-table">
+        <tr>
+          <td>- HTML</td>
+          <td>- jQuery</td>
+        </tr>
+        <tr>
+          <td>- CSS</td>
+          <td>- Node JS</td>
+        </tr>
+        <tr>
+          <td>- Bootstrap 4</td>
+          <td>- MongoDb</td>
+        </tr>
+        <tr>
+          <td>- Javascript</td>
+          <td>- Express & EJS</td>
+        </tr>
+      </table>
     </div>
   </section>
   <section id="projects">
