--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <h2 class="heading white-text">About me </h2>
     <div id="about-container" class="white-text">
       <p>Starting in early 2019, I have been steadily improving my front-end coding skills through a number of online resources. I hope to one day become a professional web developer.</p>
-       <table class="proficiency-table">
+       <p class="proficiency-list">I am currently experienced in:</p>
+	    <table class="proficiency-table">
         <tr>
           <td>- HTML</td>
           <td>- jQuery</td>
