--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>Adam Walker Personal Portfolio Web-page</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/0db405f613.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,35 +16,35 @@
     <h2 id="sub-heading" class="white-text">Aspiring web developer and freeCodeCamp student.</h2>
     <div id="icons">
       <div class="icon-container">
-        <a href="https://www.linkedin.com/in/adamwalkeruk/" target="_blank" class="fab fa-linkedin-in"></a></div>
+        <a href="https://www.linkedin.com/in/adamwalkeruk/" target="_blank" class="linkIcon fab fa-linkedin-in"></a></div>
       <div class="icon-container">
-        <a href="https://codepen.io/nootuff" target="_blank" class="fab fa-codepen"></a></div>
+        <a href="https://codepen.io/nootuff" target="_blank" class="linkIcon fab fa-codepen"></a></div>
       <div class="icon-container">
-        <a href="https://github.com/Nootuff" target="_blank" class="fab fa-github"></a></div>
+        <a href="https://github.com/Nootuff" target="_blank" class="linkIcon fab fa-github"></a></div>
       <div class="icon-container">
-        <a href="https://twitter.com/AdamJonWalker" target="_blank" class="fab fa-twitter"></a></div>
+        <a href="https://twitter.com/AdamJonWalker" target="_blank" class="linkIcon fab fa-twitter"></a></div>
     </div>
   </section>
   <section id="about" class="dark-grey-background">
     <h2 class="heading white-text">About me </h2>
     <div id="about-container" class="white-text">
       <p>Starting in early 2019, I have been steadily improving my front-end coding skills through a number of online resources. I hope to one day become a professional web developer.</p>
-       <p class="proficiency-list">I am currently experienced in:</p>
-	    <table class="proficiency-table">
+      <p class="proficiency-list">I am currently experienced in:</p>
+       <table class="proficiency-table">
         <tr>
-          <td>- HTML</td>
+          <td><i class="fab fa-html5"></i> HTML</td>
           <td>- jQuery</td>
         </tr>
         <tr>
-          <td>- CSS</td>
-          <td>- Node JS</td>
+          <td ><i class="fab fa-css3"></i> CSS</td>
+          <td><i class="fab fa-node-js"></i> Node JS</td>
         </tr>
         <tr>
-          <td>- Bootstrap 4</td>
+          <td><i class="fab fa-bootstrap"></i> Bootstrap 4</td>
           <td>- MongoDb</td>
         </tr>
         <tr>
-          <td>- Javascript</td>
+          <td><i class="fab fa-js"></i> Javascript</td>
           <td>- Express & EJS</td>
         </tr>
       </table>
@@ -87,13 +84,13 @@
         </div>
       </a>
     </div>
-    <a href="https://github.com/Nootuff" target="_blank" id="profile-link">
+    <a href="https://codepen.io/nootuff" target="_blank" id="profile-link">
       <p id="link-container">See More</p>
     </a>
   </section>
   <section id="contact" class="dark-grey-background white-text">
     <h2 class="heading white-text">Let's work together!</h2>
-    <form action="/action_page.php">
+    <form >
       <label for="name">Your Name</label>
       <br>
       <input type="text" id="name" name="yourname" placeholder="Enter your name">
@@ -104,7 +101,7 @@
       <br>
       <label for="number">Your Number</label>
       <br>
-      <input type="tel" name="number" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" id="number">
+      <input type="tel" name="number" id="number">
       <br>
       <label for="comment">Your Message</label>
       <br>
@@ -112,12 +109,11 @@
 </textarea>
       <br>
       <div id="submit-container">
-        <input type="submit" value="Send" id="submit">
+        <input type="submit" value="Send" id="submit" >
       </div>
     </form>
   </section>
   <footer class="white-text">
-    <p> &copy; Adam Walker 2021 </p>
+    <p> &copy; Adam Walker 2020 </p>
   </footer>
 </body>
-</html>
