--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
+<html>
 <head>
   <title>Adam Walker Personal Portfolio Web-page</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/0db405f613.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -118,3 +120,4 @@
     <p> &copy; Adam Walker 2020 </p>
   </footer>
 </body>
+</html>
