--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
           <p class="caption">Product Landing Page <span class="pointers">>></span></p>
         </div>
       </a> 
-	   <a href="https://codepen.io/nootuff/full/RzaPWp" target="_blank">
-        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/documentation-page.jpg" width="100%" alt="Technical documentation" class="project-image">
-          <p class="caption">Documentation Page <span class="pointers">>></span></p>
+	  <a href="https://guarded-headland-06103.herokuapp.com/" target="_blank">
+        <div class="project-tile"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/dogBase-2.jpg" width="100%" alt="DogBase" class="project-image">
+          <p class="caption">dogBase <span class="pointers">>></span></p>
         </div>
       </a>
     </div>
