--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="bg bg3"></div>
     <h1 id="intro" class="white-text"><span id="hello" data-text="Hello my name is">Hello my name is </span><br class="line-breaker"><span id="adam">Adam Walker</span></h1>
     <h2 id="sub-heading" class="white-text fadeTarget">Aspiring web developer and freeCodeCamp student.</h2>
-    <div id="icons">
+    <div id="icons" class="fadeTarget">
       <div id="linkedin" class="icon-container fadeTarget">
         <a href="https://www.linkedin.com/in/adamwalkeruk/" target="_blank" class="linkIcon fab fa-linkedin-in"></a></div>
       <div id="codepen" class="icon-container fadeTarget">
