--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </nav>
   
   <section id="about">
-    <h2 class="heading white-text slide-right slide-side-target fade-target">About me </h2>
+    <h2 class="heading white-text slide-right slide-side-target fade-target">About</h2>
     <div id="about-container" class="white-text">
       <div class="fade-target">
       <p id="about-para">Starting in early 2019, I have been steadily improving my web development skills through a number of online resources. I hope to one day become a professional web developer.</p>
@@ -63,9 +63,8 @@
       </div>
     </div>
   </section>
-  
   <section id="projects">
-    <h2 class="heading white-text slide-left slide-side-target">My Projects</h2>
+    <h2 class="heading white-text slide-left slide-side-target">Projects</h2>
 
     <div class="slide-up-target project-base white-text">
       <a class="project-image top-image" href="https://www.dogbase.net/" target="_blank"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/dogbase-image-2.png" width="100%"></a>
@@ -122,13 +121,13 @@
       </div>
       <a class="project-image bottom-image" href="https://codepen.io/nootuff/full/eYJZKge" target="_blank"><img src="https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/palindrome-checker-2.png" width="100%"></a>
     </div>
+
     <a href="https://codepen.io/nootuff" target="_blank" id="profile-link">
       <p id="link-container" class="fade-target">See More</p>
     </a>
   </section>
-  
   <section id="contact" class="white-text">
-    <h2 class="heading white-text slide-right slide-side-target">Let's work together!</h2>
+    <h2 class="heading white-text slide-right slide-side-target">Contact</h2>
     <div id="form-container">
       <h3 id="form-header" class="swing-up-target"><span>Want to contact me? </span><span id="of-course">Of course you do!</span></h3>
       <form id="scale-up-target">
@@ -155,7 +154,6 @@
       </form>
     </div>
   </section>
-  
   <footer class="white-text">
     <p id="copyright" class="fade-target"> &copy; Adam Walker 2020</p>
     <p id="footer-icons" class="fade-target">
@@ -167,4 +165,5 @@
   </footer>
   <script type="text/javascript" src="funcs.js"></script>
 </body>
+
 </html>
