--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <p><i class="fab fa-html5"></i> HTML</p>
           <p><i class="fab fa-css3"></i> CSS</p>
           <p><i class="fab fa-bootstrap"></i> Bootstrap 4</p>
+          <p><i class="fab fa-sass"></i> Sass</p>
           <p><i class="fab fa-js"></i> Javascript</p>
         </div>
         <div class="right column">
@@ -59,6 +60,7 @@
           <p><i class="fab fa-node-js"></i> Node JS</p>
           <p><i class="icon-mongodb"></i> MongoDb</p>
           <p><i class="icon-npm"></i> Express & EJS</p>
+          <p><i class="fab fa-github"></i> Git & GitHub</p>
         </div>
       </div>
     </div>
