--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div id="form-container">
       <h3 id="form-header" class="swing-up-target"><span>Want to contact me? </span><span id="of-course">Of course you do!</span></h3>
       
-      <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact.php">
+      <form id="scale-up-target" class="fcf-form-class" method="post" action="contact.php">
         
           <div class="fcf-form-group">
               <label for="Name" class="fcf-label">Your name</label>
