--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
     <div id="form-container">
       <h3 id="form-header" class="swing-up-target"><span>Want to contact me? </span><span id="of-course">Of course you do!</span></h3>
       
-      <form id="scale-up-target" action="contact.php" method="post">
+        <form id="scale-up-target" action="http://formspree.io/adamwalkerlondon@gmail.com">
         <label for="name">Your Name</label>
         <br>
         <input name="name" type="text" id="name" name="yourname" placeholder="Enter your name">
         <br>
-        <label for="email">Your Email</label>
+        <label for="_replyto">Your Email</label>
         <br>
-        <input name="email" type="email" id="email" placeholder=" Enter your email" required>
+        <input name="_replyto" type="email" id="email" placeholder=" Enter your email" required>
         <br>
         <label for="number">Your Number</label>
         <br>
