--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div id="form-container">
       <h3 id="form-header" class="swing-up-target"><span>Want to contact me? </span><span id="of-course">Of course you do!</span></h3>
       
-        <form id="scale-up-target" action="http://formspree.io/adamwalkerlondon@gmail.com">
+        <form id="scale-up-target" action="http://formspree.io/adamwalkerlondon@gmail.com" method="post">
         <label for="name">Your Name</label>
         <br>
         <input name="name" type="text" id="name" name="yourname" placeholder="Enter your name">
