--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
         <br>
         <input type="tel" name="number" id="number">
         <br>
-        <label for="comment">Your Message</label>
+        <label for="message">Your Message</label>
         <br>
-        <textarea rows="4" cols="50" name="comment" id="comment" placeholder=" Something to say?" form="usrform">
+        <textarea rows="4" cols="50" name="message" id="comment" placeholder=" Something to say?" form="usrform">
 </textarea>
         <br>
         <div id="submit-container">
