--- a/index.html
+++ b/index.html
@@ -146,10 +146,11 @@
         <br>
         <input type="tel" name="number" id="number">
         <br>
-        <label for="message">Your Message</label>
-        <br>
-        <textarea rows="4" cols="50" name="message" id="comment" placeholder=" Something to say?" form="usrform">
+        <label for="message">Your Message
+        
+        <textarea rows="4" cols="50" name="message" id="comment" placeholder=" Something to say?">
 </textarea>
+          </label>
         <br>
         <div id="submit-container">
           <input type="submit" value="Send" id="submit">
