--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div id="submit-container">
           <input type="submit" value="Send" id="submit" onclick="return emptyChecker()">
         </div>
-        <h5>Or contact me on: <span class="blue-text">adamwalkerlondon@gmail.com</span></h5>
+      <p id="my-email">Or contact me on: <span class="blue-text">adamwalkerlondon@gmail.com</span></p>
       </form>
   
     </div>
