--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     -->
-    <div id="intro-button"><a class="fade-target project-button github" href="#navbar">Let me show you!</a></div>
+    <div id="intro-button" class="slide-up-target"><a class="small-button filling-button" href="#navbar">Let me show you!</a></div>
   </section>
 
   <nav id="navbar">
@@ -55,10 +55,11 @@
       <div class="fade-target">
         <p id="about-para">Starting in early 2019, I have been steadily improving my web development skills through a
           number of online resources. I hope to one day become a professional web developer.</p>
-          <div style=" text-align: center;"><a class="project-button github " href="https://github.com/Nootuff"
+          <div style=" text-align: center;">
+        <!-- <a class="project-button github " href="https://github.com/Nootuff"
             target="_blank">My Github</a>
             <a class="project-button github " href="https://www.linkedin.com/in/adamwalkeruk/"
-            target="_blank">My Linkedin</a>
+            target="_blank">My Linkedin</a> -->
           </div>
         <p id="proficiency-subheading" class="">Skills</p>
       </div>
@@ -100,8 +101,8 @@
           Express and MongoDB. Users are able to create accounts & upload, edit or delete content while interacting with
           other users uploads. Full cloud storage using MongoDB Atlas and Cloudinary. </p>
         <div class="button-container">
-          <a class="project-button visit " href="https://www.dogbase.net/" target="_blank">Visit</a>
-          <a class="project-button github " href="https://github.com/Nootuff/Express-Dog-Project"
+          <a class="small-button filling-button " href="https://www.dogbase.net/" target="_blank">Visit</a>
+          <a class="small-button filling-button " href="https://github.com/Nootuff/Express-Dog-Project"
             target="_blank">Github</a>
         </div>
       </div>
@@ -121,8 +122,8 @@
           equivalent. It will also convert & display the component numbers to demonstrate the makeup of the overall
           figure.</p>
         <div class="button-container">
-          <a class="project-button visit" href="https://weightform.netlify.app/" target="_blank">Visit</a>
-          <a class="project-button github" href="https://github.com/Nootuff/React-Workout-App"
+          <a class="small-button filling-button" href="https://weightform.netlify.app/" target="_blank">Visit</a>
+          <a class="small-button filling-button" href="https://github.com/Nootuff/React-Workout-App"
             target="_blank">Github</a>
         </div>
       </div>
@@ -142,8 +143,8 @@
           themselves tasks, group tasks into project directories, assign task priorities & active deadlines, add notes and
           restore deleted tasks. Data is stored in localHost & can be fully edited or deleted.</p>
         <div class="button-container">
-          <a class="project-button visit" href="https://dothistasktracker.netlify.app/" target="_blank">Visit</a>
-          <a class="project-button github" href="https://github.com/Nootuff/React-ToDo-App" target="_blank">Github</a>
+          <a class="small-button filling-button" href="https://dothistasktracker.netlify.app/" target="_blank">Visit</a>
+          <a class="small-button filling-button" href="https://github.com/Nootuff/React-ToDo-App" target="_blank">Github</a>
         </div>
       </div>
       <a class="project-image bottom-image" href="https://dothistasktracker.netlify.app/" target="_blank"><img
@@ -162,9 +163,9 @@
           display random inspirational quotes with a random background. Additional styling using jQuery. The project
           also features twitter integration allowing the user to tweet the quote directly from the site.</p>
         <div class="button-container">
-          <a class="project-button visit" href="https://nootuff.github.io/inspiring-quote-generator/"
+          <a class="small-button filling-button" href="https://nootuff.github.io/inspiring-quote-generator/"
             target="_blank">Visit</a>
-          <a class="project-button github" href="https://github.com/Nootuff/inspiring-quote-generator"
+          <a class="small-button filling-button" href="https://github.com/Nootuff/inspiring-quote-generator"
             target="_blank">Github</a>
         </div>
       </div>
@@ -176,7 +177,7 @@
 
 
     <a href="https://github.com/Nootuff" target="_blank" id="profile-link">
-      <p id="link-container" class="fade-target">See More</p>
+      <p  class="large-button fade-target filling-button">See More</p>
     </a>
   </section>
   <section id="contact" class="white-text">
@@ -200,9 +201,9 @@
         </label>
         <br>
         <div id="submit-container">
-          <input type="submit" value="Send" id="submit" onclick="return emptyChecker()">
+          <input type="submit" value="Send" class="large-button filling-button" onclick="return emptyChecker()">
         </div>
-        <p id="my-email">Or email me on: <span class="blue-text">adamwalkerlondon@gmail.com</span></p>
+        <h5 id="my-email">Or email me on: <span class="blue-text"><br class="line-breaker">adamwalkerlondon@gmail.com</span></h5>
       </form>
 
     </div>
